--- a/.travis copy v2.yml
+++ b/.travis copy v2.yml
@@ -1,45 +1,56 @@
-jobs:
-  include:
-  - dist: jammy
-  - dist: bionic
-  - dist: focal
-  - dist: noble
+language: android
+sudo: true
+dist: focal
+jdk: openjdk11
 
-services:
-- postgresql
+android:
+  components:
+    - platform-tools
+    - build-tools;30.0.0
+    - platforms;android-30
+    - extras;android;m2repository
+    - extras;google;auto
+    - extras;google;google_play_services
+    - extras;google;instantapps
+    - extras;google;m2repository
+    - extras;google;market_apk_expansion
+    - extras;google;market_licensing
+    - extras;google;simulators
+    - extras;google;webdriver
+    - system-images;android-30;google_apis;x86_64
 
-addons:
-  postgresql: '14'
-  apt:
-    packages:
-    - postgresql-14
-    - postgresql-client-14
-    - postgresql-server-dev-14
-    - postgresql-14-postgis-3
-    - postgresql-14-postgis-3-scripts
+before_script:
+  # Ustawiamy zmienne środowiskowe na /usr/local – oczekiwana lokalizacja SDK
+  - export ANDROID_HOME=/usr/local
+  - export ANDROID_SDK_ROOT=/usr/local
+  # Tworzymy dowiązania symboliczne z preinstalowanego Android SDK (w /usr/local/android-sdk) do /usr/local
+  - sudo ln -s /usr/local/android-sdk/cmdline-tools /usr/local/cmdline-tools
+  - sudo ln -s /usr/local/android-sdk/build-tools /usr/local/build-tools
+  - sudo ln -s /usr/local/android-sdk/emulator /usr/local/emulator
+  - sudo ln -s /usr/local/android-sdk/extras /usr/local/extras
+  - sudo ln -s /usr/local/android-sdk/platform-tools /usr/local/platform-tools
+  - sudo ln -s /usr/local/android-sdk/system-images /usr/local/system-images
+  # Aktualizujemy PATH, aby korzystać z narzędzi znajdujących się w nowej strukturze
+  - export PATH=/usr/local/cmdline-tools/bin:/usr/local/emulator:/usr/local/platform-tools:$PATH
+  # Tworzymy AVD o nazwie "test" na podstawie system-image dla API 30
+  - echo no | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --force
+  # Uruchamiamy emulator (bez audio, bez okna, przyspieszenie wyłączone)
+  - emulator -avd test -no-audio -no-window -accel off &
+  # Czekamy na pełne uruchomienie emulatora
+  #- android-wait-for-emulator
+  # Odblokowujemy ekran emulatora
+  - adb shell input keyevent 82 &
 
 script:
- - psql --version
- - sudo systemctl status postgresql@14-main || true
- - sudo journalctl -u postgresql@14-main --no-pager | tail -n 100 || true
- - sudo ls -la /var/lib/postgresql/14/main/ || true
- - sudo ls -la /etc/postgresql/14/main/ || true
- - sudo cat /etc/postgresql/14/main/postgresql.conf | grep -E 'port|listen|data_directory' || true
- - sudo pg_lsclusters || true
- - sudo systemctl list-units | grep postgres || true
- - sudo du -sh /var/lib/postgresql/14/main/ || true
- - df -h || true
- - sudo netstat -tulpn | grep 5432 || true
- - sudo ps aux | grep postgres || true
- - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT version();" || true
- # Dodatkowe sprawdzenia:
- - sudo find /var/lib/postgresql -type d -name "main" | sort || true
- - sudo find /etc/postgresql -type d -name "main" | sort || true
- - sudo grep -r "port =" /etc/postgresql/ || true
- - sudo pg_lsclusters -h || true
- - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT datname, pg_encoding_to_char(encoding), datcollate FROM pg_database;" || true
- - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT name, setting FROM pg_settings WHERE name LIKE 'port' OR name LIKE 'listen%' OR name = 'data_directory';" || true
- - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT name, default_version, installed_version FROM pg_available_extensions WHERE name = 'postgis';" || true
- - sudo PGPASSWORD=postgres psql -U postgres -h localhost -p 5432 -c "SELECT * FROM pg_stat_activity;" || true
- - sudo cat /etc/postgresql/14/main/pg_hba.conf || true
- - dpkg -l | grep postgresql || true
+  - ./gradlew build
+  - sdkmanager --sdk_root=$ANDROID_SDK_ROOT --list
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
