--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: android
 sudo: true
 dist: focal
+install: ant deps
 jdk: openjdk11
 
 android:
@@ -35,7 +36,7 @@ before_script:
   # Tworzymy AVD o nazwie "test" na podstawie system-image dla API 30
   - echo no | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --force
   # Uruchamiamy emulator (bez audio, bez okna, przyspieszenie wyłączone)
-  - emulator -avd test -no-audio -no-window -accel off &
+
   # Czekamy na pełne uruchomienie emulatora
   #- android-wait-for-emulator
   # Odblokowujemy ekran emulatora
