focal android test v30 emulator

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
+language: android
 dist: focal
 
+android:
+  components:
+    - platform-tools
+    - build-tools;30.0.0
+    - platforms;android-30
 
-script:
-  - echo "test"
+
+
+
