--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ android:
     - platforms;android-30
 
 script:
-  - env
+  - export SDK_ROOT="/usr/local/android-sdk"
   - ls -ld /usr/local/android-sdk/cmdline-tools/latest/bin
   - which sdkmanager
   - sdkmanager --version
