--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ script:
   - export PATH="$SDK_ROOT/cmdline-tools/latest/bin:$PATH"
   - ls -ld /usr/local/android-sdk/cmdline-tools/latest/bin
   - which sdkmanager
-  - ls -la /usr/local/android-sdk
+  - ls -la /usr/local/android-sdk/emulator
   - sdkmanager --sdk_root=/usr/local/android-sdk --version
