--- a/.travis.yml
+++ b/.travis.yml
@@ -19,22 +19,8 @@ android:
     - system-images;android-30;google_apis;x86_64
 
 before_script:
-  #- export PATH=/usr/local/cmdline-tools/bin:/usr/local/emulator:/usr/local/platform-tools:$PATH
-  - echo no | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --force
-  # Uruchamiamy emulator (bez audio, bez okna, przyspieszenie wyłączone)
-  - emulator -avd test -no-audio -no-window -accel off &
-  - adb shell input keyevent 82 &
+  - - echo "before script start"
 
 script:
-  - ./gradlew build
-  - sdkmanager --sdk_root=$ANDROID_SDK_ROOT --list
+  - echo "script start"
 
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-    - $HOME/.android/build-cache
