--- a/.travis4.yml
+++ b/.travis4.yml
@@ -1,49 +1,22 @@
-language: android
-dist: focal
-jdk: openjdk11
-
-android:
-  components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - tools
-    - platform-tools
-    - build-tools;30.0.0                  # The BuildTools version used by your project
-    - platforms;android-30                # The SDK version used to compile your project
-
-    - extras;android;m2repository         # Android Support Repository (v47.0.0)
-    - extras;google;auto                  # Android Auto Desktop Head Unit Emulator (v2.0)
-    - extras;google;google_play_services  # Google Play services (v49)
-    - extras;google;instantapps           # Google Play Instant Development SDK (v1.9.0)
-    - extras;google;m2repository          # Google Repository (v58)
-    - extras;google;market_apk_expansion  # Google Play APK Expansion library (v1)
-    - extras;google;market_licensing      # Google Play Licensing Library (v1)
-    - extras;google;simulators            # Android Auto API Simulators (v1)
-    - extras;google;webdriver             # Google WebDriver
-    - system-images;android-30;google_apis;x86_64
-
-before_script:
-  - export PATH=$ANDROID_HOME/emulator:$PATH
-  - source ~/.bashrc
-  # Create an AVD named "test" using a system image for API 30
-  - echo no | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --force
-  # Start the emulator without audio or window
-  - emulator -avd test -no-audio -no-window &
-  # Wait for the emulator to boot
-  - android-wait-for-emulator
-  # Unlock the emulator screen
-  - adb shell input keyevent 82 &
+dist: focal  # Użyj Ubuntu 20.04
 
 script:
-  - ./gradlew build
-  - /usr/local/android-sdk/cmdline-tools/bin/sdkmanager --sdk_root=/usr/local/android-sdk --list
+  # Sprawdź wersję Ubuntu i zapisz do pliku
+  - lsb_release -a > ubuntu_version.txt
+  - cat ubuntu_version.txt
 
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-    - $HOME/.android/build-cache
+after_success:
+  - git config --global user.name "Travis CI"
+  - git config --global user.email "your-email@example.com"
+  
+  # Skopiuj repozytorium za pomocą tokena
+  - git clone https://$GITHUB_TOKEN@github.com/username/repo.git
+  - cd repo
 
+  # Skopiuj plik i wykonaj commit
+  - cp ../ubuntu_version.txt .
+  - git add ubuntu_version.txt
+  - git commit -m "Update Ubuntu version from Travis CI"
+  
+  # Wypchnij zmiany na repozytorium
+  - git push origin main
