--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ android:
 
 script:
   - export ANDROID_SDK_ROOT=/usr/local/android-sdk
+  - export PATH=${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin:$PATH
   - sdkmanager --version
 
 
