--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ android:
     - build-tools;30.0.0
 
 script:
-  - export ANDROID_HOME=/usr/local/android-sdk
-  - ls -la /usr/local/android-sdk/cmdline-tools/latest/
+  - cp -R /usr/local/android-sdk $HOME/android-sdk
+  - export ANDROID_HOME=$HOME/android-sdk
+  - export ANDROID_SDK_ROOT=$HOME/android-sdk
+  - ls -la $HOME/android-sdk/cmdline-tools/latest/
   - sdkmanager --version
