--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ before_install:
   - ls -la /usr/local/android-sdk/cmdline-tools/latest
 
 script:
+  - export PATH=${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin:$PATH
   - sdkmanager --version
