--- a/.travis.yml
+++ b/.travis.yml
@@ -19,18 +19,13 @@ android:
     - system-images;android-30;google_apis;x86_64
 
 before_script:
-  # Tworzymy AVD o nazwie "test" na podstawie system-image dla API 30
   - echo no | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --force
-  # Uruchamiamy emulator (bez audio, bez okna, przyspieszenie wyłączone)
   - emulator -avd test -no-audio -no-window -accel off &
-  # Czekamy na pełne uruchomienie emulatora
-  #- android-wait-for-emulator
-  # Odblokowujemy ekran emulatora
   - adb shell input keyevent 82 &
 
 script:
   - ./gradlew build
-  - sdkmanager --sdk_root=$ANDROID_SDK_ROOT --list
+  - sdkmanager --list
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
