--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,28 @@
-dist: focal
-
+---
+language: android
+before_cache:
+- rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+- rm -rf $HOME/.gradle/caches/*/plugin-resolution/
+before_install:
+- touch $HOME/.android/repositories.cfg
+- yes | sdkmanager "platforms;android-30"
+- yes | sdkmanager "build-tools;30.0.2"
+cache:
+  directories:
+  - "$HOME/.gradle/caches/"
+  - "$HOME/.gradle/wrapper/"
+  - "$HOME/.android/build-cache"
+android:
+  components:
+  - tools
+  - tools
+  - platform-tools
+git:
+  quiet: true
+  submodules: false
+os: linux
+group: stable
+dist: jammy
 script:
-  - lsb_release -a > ubuntu_version.txt
-  - dpkg -l > installed_packages.txt
-  - cat ubuntu_version.txt
-  - cat installed_packages.txt
+- echo "test pass"
+stage: Detekt
