--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ before_cache:
 - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
 before_install:
 - touch $HOME/.android/repositories.cfg
-- yes | sdkmanager "platforms;android-30"
-- yes | sdkmanager "build-tools;30.0.2"
+- yes | sdkmanager --verbose "platforms;android-30"
+- yes | sdkmanager --verbose "build-tools;30.0.2"
 cache:
   directories:
   - "$HOME/.gradle/caches/"
