--- a/.travis4.yml
+++ b/.travis4.yml
@@ -1,22 +1,28 @@
-dist: focal  # Użyj Ubuntu 20.04
-
+---
+language: android
+before_cache:
+- rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+- rm -rf $HOME/.gradle/caches/*/plugin-resolution/
+before_install:
+- touch $HOME/.android/repositories.cfg
+- yes | sdkmanager --verbose "platforms;android-30"
+- yes | sdkmanager --verbose "build-tools;30.0.2"
+cache:
+  directories:
+  - "$HOME/.gradle/caches/"
+  - "$HOME/.gradle/wrapper/"
+  - "$HOME/.android/build-cache"
+android:
+  components:
+  - tools
+  - tools
+  - platform-tools
+git:
+  quiet: true
+  submodules: false
+os: linux
+group: stable
+dist: jammy
 script:
-  # Sprawdź wersję Ubuntu i zapisz do pliku
-  - lsb_release -a > ubuntu_version.txt
-  - cat ubuntu_version.txt
-
-after_success:
-  - git config --global user.name "Travis CI"
-  - git config --global user.email "your-email@example.com"
-  
-  # Skopiuj repozytorium za pomocą tokena
-  - git clone https://$GITHUB_TOKEN@github.com/username/repo.git
-  - cd repo
-
-  # Skopiuj plik i wykonaj commit
-  - cp ../ubuntu_version.txt .
-  - git add ubuntu_version.txt
-  - git commit -m "Update Ubuntu version from Travis CI"
-  
-  # Wypchnij zmiany na repozytorium
-  - git push origin main
+- echo "test pass"
+stage: Detekt
