--- a/.travis4.yml
+++ b/.travis4.yml
@@ -1,28 +1,18 @@
----
-language: android
-before_cache:
-- rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-- rm -rf $HOME/.gradle/caches/*/plugin-resolution/
-before_install:
-- touch $HOME/.android/repositories.cfg
-- yes | sdkmanager --verbose "platforms;android-30"
-- yes | sdkmanager --verbose "build-tools;30.0.2"
-cache:
-  directories:
-  - "$HOME/.gradle/caches/"
-  - "$HOME/.gradle/wrapper/"
-  - "$HOME/.android/build-cache"
-android:
-  components:
-  - tools
-  - tools
-  - platform-tools
-git:
-  quiet: true
-  submodules: false
-os: linux
-group: stable
-dist: jammy
+dist: focal
+
 script:
-- echo "test pass"
-stage: Detekt
+  - lsb_release -a > ubuntu_version.txt
+  - apt list --installed > installed_packages.txt
+  - cat ubuntu_version.txt
+  - cat installed_packages.txt
+
+after_success:
+  - git config --global user.name "Travis CI"
+  - git config --global user.email "your-email@example.com"
+  - git clone https://$GITHUB_TOKEN@github.com/kamildevtactics/travis_build_test.git
+  - cd travis_build_test
+  - cp ../ubuntu_version.txt .
+  - cp ../installed_packages.txt .
+  - git add ubuntu_version.txt installed_packages.txt
+  - git commit -m "Update Ubuntu version and installed packages from Travis CI"
+  - git push origin main
