--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
-language: android
-dist: jammy
-jdk: oraclejdk17
-
-rvm:
-  - 3.1.4
-
-android:
-  components:
-    - tools
-    - platform-tools
-    - tools
-    - extra-android-m2repository
+dist: focal
 
 script:
-- echo "test pass"
+  - lsb_release -a > ubuntu_version.txt
+  - apt list --installed > installed_packages.txt
+  - cat ubuntu_version.txt
+  - cat installed_packages.txt
 
+after_success:
+  - git config --global user.name "kamildevtactics"
+  - git config --global user.email "kamil.maludzinski@devtactics.net"
+  - git clone https://$GITHUB_TOKEN@github.com/kamildevtactics/travis_build_test.git
+  - cd travis_build_test
+  - cp ../ubuntu_version.txt .
+  - cp ../installed_packages.txt .
+  - git add ubuntu_version.txt installed_packages.txt
+  - git commit -m "Update Ubuntu version and installed packages from Travis CI"
+  - git push origin main
