--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,21 @@
 dist: focal
 
 script:
-  - lsb_release -a > ubuntu_version.txt
-  - apt list --installed > installed_packages.txt
-  - cat ubuntu_version.txt
-  - cat installed_packages.txt
+  - distro=$(lsb_release -c -s)
+  - mkdir -p $distro
+  - lsb_release -a > $distro/ubuntu_version.txt
+  - apt list --installed > $distro/installed_packages.txt
+  - cat $distro/ubuntu_version.txt
+  - cat $distro/installed_packages.txt
 
 after_success:
   - git config --global user.name "kamildevtactics"
   - git config --global user.email "kamil.maludzinski@devtactics.net"
-  - git clone https://$GITHUB_TOKEN@github.com/kamildevtactics/travis_build_test.git
+  - git clone https://kamildevtactics:$GITHUB_TOKEN@github.com/kamildevtactics/travis_build_test.git
   - cd travis_build_test
-  - cp ../ubuntu_version.txt .
-  - cp ../installed_packages.txt .
-  - git add ubuntu_version.txt installed_packages.txt
+  - mkdir -p focal
+  - cp ../focal/ubuntu_version.txt focal/ubuntu_version.txt
+  - cp ../focal/installed_packages.txt focal/installed_packages.txt
+  - git add focal/ubuntu_version.txt focal/installed_packages.txt
   - git commit -m "Update Ubuntu version and installed packages from Travis CI"
   - git push origin main
