--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ after_success:
   - git clone https://kamildevtactics:$GITHUB_TOKEN@github.com/kamildevtactics/travis_build_test.git
   - cd travis_build_test
   - mkdir -p focal
-  - cp ../focal/ubuntu_version.txt focal/ubuntu_version.txt
-  - cp ../focal/installed_packages.txt focal/installed_packages.txt
-  - git add focal/ubuntu_version.txt focal/installed_packages.txt
+  - cp ../focal/ubuntu_version.txt focal/stable_ubuntu_version.txt
+  - cp ../focal/installed_packages.txt focal/stable_installed_packages.txt
+  - git add focal/ubuntu_version.txt focal/stable_installed_packages.txt
   - git commit -m "Update Ubuntu version and installed packages from Travis CI"
   - git push origin main
