--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ after_success:
   - git config --global user.email "kamil.maludzinski@devtactics.net"
   - git clone https://kamildevtactics:$GITHUB_TOKEN@github.com/kamildevtactics/travis_build_test.git
   - cd travis_build_test
-  - mkdir -p focal
-  - cp ../focal/stable_ubuntu_version.txt focal/stable_ubuntu_version.txt
-  - cp ../focal/stable_installed_packages.txt focal/stable_installed_packages.txt
-  - git add focal/stable_ubuntu_version.txt focal/stable_installed_packages.txt
+  - mkdir -p $distro
+  - cp ../$distro/stable_ubuntu_version.txt $distro/stable_ubuntu_version.txt
+  - cp ../$distro/stable_installed_packages.txt $distro/stable_installed_packages.txt
+  - git add $distro/stable_ubuntu_version.txt $distro/stable_installed_packages.txt
   - git commit -m "Update Ubuntu version and installed packages from Travis CI"
   - git push origin main
