--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,6 @@ jobs:
 script:
   - distro=$(lsb_release -c -s)
   - mkdir -p $distro
-  - lsb_release -a > $distro/${TARGET_ENV}_ubuntu_version.txt
   - apt list --installed > $distro/${TARGET_ENV}_installed_packages.txt
 
 after_success:
@@ -34,8 +33,7 @@ after_success:
   - git clone https://kamildevtactics:$GITHUB_TOKEN@github.com/kamildevtactics/travis_build_test.git
   - cd travis_build_test
   - mkdir -p $distro
-  - cp ../$distro/${TARGET_ENV}_ubuntu_version.txt $distro/${TARGET_ENV}_ubuntu_version.txt
   - cp ../$distro/${TARGET_ENV}_installed_packages.txt $distro/${TARGET_ENV}_installed_packages.txt
-  - git add $distro/${TARGET_ENV}_ubuntu_version.txt $distro/${TARGET_ENV}_installed_packages.txt
+  - git add $distro/${TARGET_ENV}_installed_packages.txt
   - git commit -m "Update Ubuntu version and installed packages from Travis CI ($TARGET_ENV)"
   - git push origin main
