--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,22 @@ after_success:
   - git add $distro/${TARGET_ENV}_installed_packages.txt
   - git commit -m "Update installed packages from Travis CI ($TARGET_ENV)"
   - git push origin main
+
+  - if [[ "$TARGET_ENV" == *"stable"* ]]; then
+      echo "Comparing stable and dev installed packages...";
+      DEV_ENV="${TARGET_ENV/stable/dev}";
+      echo "Comparing $TARGET_ENV with $DEV_ENV";
+      if [[ -f "$distro/${DEV_ENV}_installed_packages.txt" ]]; then
+        echo "Found $DEV_ENV installed package list, generating diff report...";
+        DIFF_REPORT="${distro}/${TARGET_ENV}_vs_${DEV_ENV}_diff.txt";
+        echo "=== Packages present in $DEV_ENV but missing in $TARGET_ENV ===" > $DIFF_REPORT;
+        diff --new-line-format="+ %L" --old-line-format="- %L" --unchanged-line-format="" $distro/${DEV_ENV}_installed_packages.txt $distro/${TARGET_ENV}_installed_packages.txt >> $DIFF_REPORT;
+        echo "Comparison complete. Saving report to $DIFF_REPORT";
+        cat $DIFF_REPORT;
+        git add $DIFF_REPORT;
+        git commit -m "Add diff report for $TARGET_ENV vs $DEV_ENV";
+        git push origin main;
+      else
+        echo "$DEV_ENV installed package list not found. Skipping comparison.";
+      fi
+    fi
