--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: minimal
 
 os: linux
-dist: focal  # Ubuntu 20.04 (Focal Fossa)
+dist: bionic  # Ubuntu 20.04 (Focal Fossa)
+group: dev
 
 services:
   - podman
