--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: minimal
 
 os: linux
-dist: bionic  # Ubuntu 20.04 (Focal Fossa)
+dist: bionic 
 group: dev
 
 services:
@@ -9,44 +9,33 @@ services:
 
 jobs:
   include:
-    - name: "Verify Docker Installation and Run Tests"
+    - name: "Verify Podman Installation and Run Tests"
       script:
-        # Check Docker installation
-        - echo "Verifying Docker installation..."
-        - docker --version
-        - docker info
+        # Check Podman installation
+        - echo "Verifying Podman installation..."
+        - podman --version
+        - podman info
         
-        # Check Docker service status
-        - systemctl status docker || true
-        
-        # Check Docker package information
-        - dpkg -l | grep -i docker
-        
-        # Test Docker functionality
-        - echo "Testing Docker functionality..."
-        - docker pull hello-world
-        - docker run hello-world
-        
-        # Test Docker Compose if needed
-        - echo "Checking Docker Compose..."
-        - docker-compose --version || echo "Docker Compose not installed"
+        # Test Podman functionality
+        - echo "Testing Podman functionality..."
+        - podman pull docker.io/library/hello-world
+        - podman run hello-world
         
         # Run a more complex container as a test
         - echo "Running Nginx container as a test..."
-        - docker run -d -p 8080:80 --name nginx-test nginx:alpine
-        - docker ps | grep nginx-test
+        - podman run -d -p 8080:80 --name nginx-test docker.io/library/nginx:alpine
+        - podman ps | grep nginx-test
         - curl -s localhost:8080 | grep -i "Welcome to nginx" || echo "Nginx test failed"
-        - docker stop nginx-test
-        - docker rm nginx-test
+        - podman stop nginx-test
+        - podman rm nginx-test
         
-        # Check Docker network and volume functionality
-        - echo "Testing Docker network functionality..."
-        - docker network create test-network
-        - docker network ls | grep test-network
-        - docker network rm test-network
+        # Check Podman network and volume functionality
+        - echo "Testing Podman network functionality..."
+        - podman network create test-network
+        - podman network ls | grep test-network
+        - podman network rm test-network
         
-        - echo "Testing Docker volume functionality..."
-        - docker volume create test-volume
-        - docker volume ls | grep test-volume
-        - docker volume rm test-volume
-
+        - echo "Testing Podman volume functionality..."
+        - podman volume create test-volume
+        - podman volume ls | grep test-volume
+        - podman volume rm test-volume
