--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ jobs:
   include:
     - name: "Diagnoza i Weryfikacja Podman"
       script:
+        - cd /tmp
+        - wget -q https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_18.04/amd64/podman_1.8.0~1_amd64.deb
+        - sudo dpkg -i podman_1.8.0~1_amd64.deb || sudo apt-get -f install -y
         # Diagnostyka systemu przed testami
         - echo "==== DIAGNOSTYKA SYSTEMU ===="
         - echo "Wersja systemu:"
