--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 os: linux
-dist: bionic 
+dist: bionic
 group: dev
 
 before_install:
   - echo "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_18.04/ /" | sudo tee /etc/apt/sources.list.d/devel:kubic:libcontainers:stable.list
-  - wget -qO - https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_18.04/Release.key | sudo apt-key add -
+  - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 4D64390375060AA4
   - sudo apt-get update
   - sudo apt-get install -y podman
 
