--- a/.travis copy v2.yml
+++ b/.travis copy v2.yml
@@ -1,55 +1,30 @@
-
+os: linux
 dist: focal
-jdk: openjdk11
+group: dev
 
-android:
-  components:
-    - platform-tools
-    - build-tools;30.0.0
-    - platforms;android-30
-    - extras;android;m2repository
-    - extras;google;auto
-    - extras;google;google_play_services
-    - extras;google;instantapps
-    - extras;google;m2repository
-    - extras;google;market_apk_expansion
-    - extras;google;market_licensing
-    - extras;google;simulators
-    - extras;google;webdriver
-    - system-images;android-30;google_apis;x86_64
-
-before_script:
-  # Ustawiamy zmienne środowiskowe na /usr/local – oczekiwana lokalizacja SDK
-  - export ANDROID_HOME=/usr/local
-  - export ANDROID_SDK_ROOT=/usr/local
-  # Tworzymy dowiązania symboliczne z preinstalowanego Android SDK (w /usr/local/android-sdk) do /usr/local
-  - sudo ln -s /usr/local/android-sdk/cmdline-tools /usr/local/cmdline-tools
-  - sudo ln -s /usr/local/android-sdk/build-tools /usr/local/build-tools
-  - sudo ln -s /usr/local/android-sdk/emulator /usr/local/emulator
-  - sudo ln -s /usr/local/android-sdk/extras /usr/local/extras
-  - sudo ln -s /usr/local/android-sdk/platform-tools /usr/local/platform-tools
-  - sudo ln -s /usr/local/android-sdk/system-images /usr/local/system-images
-  # Aktualizujemy PATH, aby korzystać z narzędzi znajdujących się w nowej strukturze
-  - export PATH=/usr/local/cmdline-tools/bin:/usr/local/emulator:/usr/local/platform-tools:$PATH
-  # Tworzymy AVD o nazwie "test" na podstawie system-image dla API 30
-  - echo no | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --force
-  # Uruchamiamy emulator (bez audio, bez okna, przyspieszenie wyłączone)
-  - emulator -avd test -no-audio -no-window -accel off &
-  # Czekamy na pełne uruchomienie emulatora
-  #- android-wait-for-emulator
-  # Odblokowujemy ekran emulatora
-  - adb shell input keyevent 82 &
+services:
+  - podman
 
 script:
-  - ./gradlew build
-  - sdkmanager --sdk_root=$ANDROID_SDK_ROOT --list
-
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-    - $HOME/.android/build-cache
+  # Sprawdź wersję Podman
+  - echo "==== SPRAWDZENIE INSTALACJI PODMAN ===="
+  - which podman || echo "Podman nie jest dostępny w PATH"
+  - podman --version || echo "Komenda podman --version zwróciła błąd"
+  
+  # Sprawdź status usług Podman
+  - echo "==== SPRAWDZENIE STATUSU USŁUG PODMAN ===="
+  - sudo systemctl status podman.service || echo "Usługa podman.service niedostępna lub nie działa"
+  - sudo systemctl status podman.socket || echo "Usługa podman.socket niedostępna lub nie działa"
+  - sudo systemctl is-active podman.service || echo "Usługa podman.service nie jest aktywna"
+  - sudo systemctl is-active podman.socket || echo "Usługa podman.socket nie jest aktywna"
+  - sudo systemctl is-enabled podman.service || echo "Usługa podman.service nie jest włączona"
+  - sudo systemctl is-enabled podman.socket || echo "Usługa podman.socket nie jest włączona"
+  
+  # Sprawdź, czy demony systemd dla Podman są uruchomione
+  - echo "==== PROCESY PODMAN ===="
+  - ps aux | grep -i podman || echo "Brak procesów Podman"
+  
+  # Sprawdź dzienniki systemowe związane z Podman
+  - echo "==== LOGI PODMAN ===="
+  - sudo journalctl -u podman.service --no-pager -n 20 || echo "Brak logów podman.service"
+  - sudo journalctl -u podman.socket --no-pager -n 20 || echo "Brak logów podman.socket"
