--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 os: linux
 dist: focal
+group: dev
 
 service:
  -podman
- 
+
 jobs:
   include:
     - name: "Check Podman Version on Ubuntu Focal"
