--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - podman
 
 before_install:
-- podman pull quay.io/example/webapp
+- podman pull quay.io/example/example
 - podman run -d -p 127.0.0.1:80:8080 quay.io/example/example /bin/sh -c "cd /app; ./start.sh;"
 - podman ps -a
 - podman run quay.io/example/example /bin/sh -c "cd /app; ./run_tests.sh"
